[package]
name = "jxlconvert"
version = "0.1.1"
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "multimedia::images"]
description = "A Rust CLI app that converts images in comic archives to JPEG XL format."
repository = "https://github.com/jindalpratik/JXLconvert"
readme = "README.md"

[dependencies]
argh = "0.1.13"
dialoguer = "0.11.0"
indicatif = "0.18.0"
walkdir = "2.5.0"
zip = "0.3.0"
zip-extensions = "0.8.3"
