[project]
name = "JXLConvert"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pratik Jindal", email = "117007380+jindalpratik@users.noreply.github.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
