[project]
name = "JXLConvert"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pratik Jindal", email = "117007380+jindalpratik@users.noreply.github.com"},
]
dependencies = [
    "typer>=0.12.3",
]
requires-python = "==3.12.4"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.4.0",
    "ruff>=0.3.7",
]

[tool.pdm.scripts]
lint = "ruff check"
app = "python src/jxlconvert"


[tool.ruff]
extend-exclude = ["typings"]
line-length = 88
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
extend-ignore = [
  "S101",
  "D203",
  "D213",
  # Format ignores
  "W191",
  "E501",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
extend-select = [
  "A",
  "ARG",
  "B",
  "B9",
  "C",
  "C4",
  "C90",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "I",
  "ICN",
  "INP",
  "ISC",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "N",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
  # "ANN", "ERA", "COM"
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["ERA001", "S101", "SLF001"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true